fix: change ContactDTO to ContactRequest and ContactResponse